# mi-io-utils

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/superpowers/plans/: 2026-05-29-mi-simple-io-implementation.md
docs/superpowers/specs/: 2026-05-29-mi-simple-io-design.md
simple-io/: Cargo.toml
simple-io/examples/: quick_start.rs
simple-io/src/: lib.rs
