[workspace]
members = ["simple-io"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["mi"]
license = "MIT"
repository = "https://github.com/miyaya33/mi-io-utils"
homepage = "https://github.com/miyaya33/mi-io-utils"
documentation = "https://docs.rs/mi-simple-io"
readme = "README.md"
