[package]
name = "mi-simple-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Small synchronous IO utilities for common file and terminal workflows."
readme = "../README.md"
keywords = ["io", "file", "filesystem", "utility"]
categories = ["filesystem", "command-line-utilities"]

[features]
default = []
password = ["dep:rpassword"]

[dependencies]
rpassword = { version = "7.4", optional = true }
